test/classes/initializers/errors/errHandling/copyInit/throwsBecauseFieldValueThrows.good
throwsBecauseFieldValueThrows.chpl:4: In method 'init=':
throwsBecauseFieldValueThrows.chpl:5: error: cannot call a throwing function outside of a try! before phase 2
